--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -22,6 +22,7 @@ html{
 body{
     background-color: var(--background-colour);
     transition: 0.5s ease-out;
+}
 
 .gradient{
     position: absolute;
