--- a/pages/projects/javascript/1-Library/styles.css
+++ b/pages/projects/javascript/1-Library/styles.css
@@ -26,175 +26,137 @@ nav h1{
     margin-left: 200px;
 }
 
-.addBookOverlay{
-    z-index: 1;
-    position: fixed;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100lvh;
-    top: 0;
-    right: 0;
-    text-align: center;
-    background-color: rgba(175, 175, 175, 0.541);
-}
-
-.formDiv{
-    z-index: 2;
-    padding: 20px;
+dialog{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    height: 450px;
     width: 300px;
-    background-color: white;
-    border-radius: 5px;
+    border: none;
+    border-radius: 25px;
 }
 
-.formDiv h2{
-    margin-bottom: 20px;
+dialog .closeBtn{
+    width: 30px;
+    height: 30px;
+    margin-left: auto;
+    border: none;
+    border-radius: 999px;
+    font-weight: 600;
 }
 
-.formDiv form{
+dialog div{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 300px;
-}
-
-.formDiv #titleInput{
-    margin-bottom: 20px;
-}
-
-.formDiv form .formInputContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.formInputContainer input{
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    background-color:rgb(243, 243, 243);
-}
-
-.formDiv .radioDiv{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-}
-
-.formDiv .radioDiv input{
-    margin-right: 5px;
-}
-
-form button{
-    color: black;
-    font-weight: 500;
-    border: none;
-    border-radius: 5px;
-    height: 40px;
-    font-size: 15px;
-    background-color: rgb(0, 231, 0);
-}
-
-.mainContent{
-    width: 100%;
-    min-height: calc(100vh - 140px);
     height: 100%;
 }
 
-.mainContent .addButton{
-    width: 100px;
-    height: 50px;
-    color: blue;
-    background-color: white;
-    border: none;
-    border-radius: 5px;
-}
-
-.mainContent .addButton:hover{
-    background-color: rgb(197, 197, 197);
-}
-
-.buttonDiv{
-    width: 100%;
+dialog form{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
+    flex-direction: column;
+}
+
+dialog form input{
+    height: 40px;
+    border-radius: 15px;
+    padding: 0 10px;
+    border: solid 1px #dadada
+}
+
+dialog form input:first-of-type{
     margin-bottom: 20px;
+}
+
+dialog form #submitBtn{
+    border: none;
+    background-color: #dadada;
+    border-radius: 50px;
+    padding: 10px;
+}
+
+dialog form #userStatus{
+    height: 40px;
+    margin-bottom: 130px;
+    border-radius: 15px;
+    padding: 0 10px;
+    border: solid 1px #dadada
+}
+
+.buttonContainer{
+    display: grid;
+    place-items: center;
+    padding: 30px 0;
+}
+
+.addBookButton{
+    padding: 20px 30px;
+    border-radius: 999px;
+    border: none;
+    background-color: #dadada;
+    transition: 0.25s;
+}
+
+.addBookButton:hover{
+    background-color: #c8c8c8;
 }
 
 .bookContainer{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 100%;
-    height: auto;
+    margin: 0 30px 60px 30px;
+    gap: 30px;
 }
 
-.bookDiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: rgb(255, 255, 255);
-    height: 300px;
+.book{
     width: 250px;
-    padding: 10px;
-    margin: 20px;
-    border-radius: 5px;
+    height: 350px;
+    padding: 20px;
+    border-radius: 25px;
+    background-color: #dadada;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
     text-align: center;
+    overflow: hidden;
 }
 
-.bookDiv h2{
-    font-size: 25px;
+.book h3{
+    font-size: 28px;
     font-weight: 600;
-    margin-top: 20px;
+    max-height: 100px;
+    overflow: hidden;
 }
 
-.bookDiv p{
-    font-size: 15px;
-}
-
-.bookDiv .bookButtonContainer{
+.book div:last-of-type{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    width: 100%;
     gap: 10px;
 }
 
-.bookDiv button{
-    border: none;
+.book button{
     width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    font-size: 15px;
+    padding: 10px;
+    border-radius: 50px;
+    border: none;
+    transition: 0.25s;
 }
 
-.bookDiv .deleteButton:hover{
-    background-color: rgb(255, 0, 0);
+.book #readStateBtn:hover{
+    background-color: #00d904;
 }
 
-.bookDiv .readState{
-    background-color: rgb(0, 179, 0);
+.book #unreadStateBtn:hover{
+    background-color: #bb0000;
 }
 
-.bookDiv .unreadState{
-    background-color: rgb(187, 0, 0);
-}
-
-.bookDiv .readState:hover{
-    background-color: rgb(0, 255, 0);
-}
-
-.bookDiv .unreadState:hover{
-    background-color: rgb(250, 0, 0);
-}
-
-footer{
-    text-align: center;
-    opacity: 0.3;
+.book .deleteButton:hover{
+    background-color: #bb0000;
 }
 
 @media only screen and (max-width: 850px) {
@@ -206,40 +168,5 @@ footer{
 
     nav h1{
         margin: 0;
-    }
-
-    .mainContent .addButton{
-        width: 150px;
-        height: 60px;
-        font-size: 15px;
-    }
-
-    .bookDiv{
-        height: 400px;
-        width: 350px;
-        padding: 20px;
-        margin: 20px;
-    }
-
-    .bookDiv h2{
-        font-size: 30px;
-    }
-    
-    .bookDiv p{
-        font-size: 20px;
-    }
-
-    .bookDiv button{
-        color: black;
-        border: none;
-        width: 100%;
-        height: 40px;
-        border-radius: 5px;
-        font-size: 20px;
-    }
-
-    footer{
-        font-size: 20px;
-        margin-bottom: 20px;
     }
 }
