--- a/homepage-styles.css
+++ b/homepage-styles.css
@@ -1,11 +1,12 @@
 :root{
-    --nav-font-weight: 100;
+    --nav-font-weight: 300;
     --navbar-colour: #12121250;
     --background-colour: #000000;
     --font-colour: #D1D5DB;
     --font-colour-two: #FFFFFF;
     --span-p-colour: #FFFFFF;
     --header-button-colour: #121212;
+    --a-border-colour: #00000000;
 }
 
 *{
@@ -17,6 +18,7 @@
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body{
@@ -39,7 +41,6 @@ body{
 }
 
 nav{
-    width: 100vw;
     height: 50px;
     display: flex;
     align-items: center;
@@ -97,6 +98,7 @@ nav button img{
     display: flex;
     align-items: center;
     font-size: 20px;
+    border: 1px solid var(--a-border-colour);
 }
 
 .header-content-container a::after{
