--- a/pages/projects/javascript/3-Restaurant-Page/src/styles/homepageStyles.css
+++ b/pages/projects/javascript/3-Restaurant-Page/src/styles/homepageStyles.css
@@ -1,5 +1,12 @@
+.titleContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .dashesH1{
-    margin-top: 50px;
+    margin-top: 75px;
     text-align: left;
     font-weight: 700;
     width: 250px;
@@ -32,7 +39,7 @@
     justify-content: center;
     gap: 200px;
     max-width: 1250px;
-    margin: 50px 50px 200px 50px;
+    margin: 50px 50px 300px 50px;
 }
 
 .homeTextContainer{
@@ -61,6 +68,28 @@
     white-space: pre-line;
 }
 
+.wrapper {
+    max-width: 1250px;
+    width: 100%;
+    overflow: hidden;
+}
+  
+.marquee {
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    animation: marquee 20s linear infinite;
+}
+
+.marquee p {
+    display: inline-block;
+    color: #00000000;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #ff0000;
+    font-size: 64px;
+    font-weight: 900;
+}
+
 /*--------------------------------------------------------*/
 
 @media only screen and (max-width: 1000px) {
@@ -82,7 +111,7 @@
         flex-direction: column;
         max-width: 500px;
         gap: 100px;
-        margin: 50px 50px 100px 50px;
+        margin: 50px 50px 200px 50px;
     }
 
     .underImage{
@@ -91,10 +120,19 @@
    }
 
    .homeImageContainer img{
-        width: 100%;
+        width: 80%;
     }
 }
 
 @media only screen and (max-width: 800px) {
 
+}
+  
+@keyframes marquee {
+    0% {
+      transform: translate3d(0, 0, 0);
+    }
+    100% {
+      transform: translate3d(-50%, 0, 0);
+    }
 }
