--- a/pages/projects/javascript/3-Restaurant-Page/src/styles/homepageStyles.css
+++ b/pages/projects/javascript/3-Restaurant-Page/src/styles/homepageStyles.css
@@ -1,31 +1,8 @@
-.titleContainer{
+.homeTitleContainer{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-}
-
-.dashesH1{
-    margin-top: 75px;
-    text-align: left;
-    font-weight: 700;
-    width: 250px;
-}
-
-.solidH1{
-    font-size: 64px;
-    font-weight: 700;
-}
-
-.redOutline{
-    color: #00000000;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: #ff0000;
-    font-size: 64px;
-    font-weight: 900;
-    letter-spacing: 5px;
-    position: relative;
-    transform: translateY(-20px);
 }
 
 .underImage{
@@ -68,6 +45,36 @@
     white-space: pre-line;
 }
 
+.scrolling_text {
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    white-space: nowrap;
+    max-width: 1500px;
+}
+
+.text span {
+    margin: 0 10px;
+}
+
+@keyframes animate_text {
+    from {
+      transform: translate3d(0, 0, 0);
+    }
+    to {
+      transform: translate3d(-100%, 0, 0);
+    }
+}
+
+.text {
+    color: #00000000;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #ff0000;
+    font-size: 64px;
+    font-weight: 900;
+    animation: animate_text 30s linear infinite; /* The animation property */
+}
+
 /*--------------------------------------------------------*/
 
 @media only screen and (max-width: 1000px) {
@@ -89,7 +96,7 @@
         flex-direction: column;
         max-width: 500px;
         gap: 100px;
-        margin: 50px 50px 200px 50px;
+        margin: 50px 30px 200px 30px;
     }
 
     .underImage{
@@ -99,14 +106,5 @@
 
    .homeImageContainer img{
     width: 100%;
-}
-}
-
-@keyframes marquee {
-    0% {
-      transform: translate3d(0, 0, 0);
-    }
-    100% {
-      transform: translate3d(-50%, 0, 0);
     }
 }
