--- a/pages/projects/javascript/3-Restaurant-Page/src/styles/mainStyles.css
+++ b/pages/projects/javascript/3-Restaurant-Page/src/styles/mainStyles.css
@@ -176,6 +176,29 @@ footer .follow-us-div div{
     gap: 10px;
 }
 
+.dashesH1{
+    margin-top: 75px;
+    text-align: left;
+    font-weight: 700;
+    width: 250px;
+}
+
+.solidH1{
+    font-size: 64px;
+    font-weight: 700;
+}
+
+.redOutline{
+    color: #00000000;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #ff0000;
+    font-size: 64px;
+    font-weight: 900;
+    letter-spacing: 5px;
+    position: relative;
+    transform: translateY(-20px);
+}
+
 /*--------------------------------------------------------*/
 
 @media only screen and (max-width: 800px) {
