--- a/pages/projects/javascript/3-Restaurant-Page/src/styles/mainStyles.css
+++ b/pages/projects/javascript/3-Restaurant-Page/src/styles/mainStyles.css
@@ -90,6 +90,7 @@ nav .active img{
 #transitionDiv{
     position: absolute;
     width: 100vw;
+    max-width:100%;
     height: 100%;
     top: 0;
     left: -100%;
