--- a/pages/projects/javascript/3-Restaurant-Page/src/styles/menuStyles.css
+++ b/pages/projects/javascript/3-Restaurant-Page/src/styles/menuStyles.css
@@ -67,7 +67,7 @@
 
     .menuItemContainer{
         flex-direction: column;
-        margin-top: 0;
+        margin-top: 20px;
         gap: 60px;
     }
 
