Android input fix

--- a/pages/projects/javascript/4-Todo-List/src/styles/main.scss
+++ b/pages/projects/javascript/4-Todo-List/src/styles/main.scss
@@ -240,6 +240,7 @@ body{
             resize: none;
             color-scheme: dark;
             margin-bottom: 10px;
+            width: 100%;
             
             &:focus-visible{
                 outline: none;
